--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -13,23 +13,23 @@
     Helvetica,
     Arial,
     sans-serif;
-  margin: 16px;
+  margin: 1rem;
 }
 
 .mtc-options__heading {
-  font-size: 16px;
+  font-size: 1rem;
   margin: 0;
   text-transform: uppercase;
-  letter-spacing: 0.5px;
-  border-bottom: 1px dashed black;
-  padding-bottom: 8px;
+  letter-spacing: 0.0313rem;
+  border-bottom: 0.0625rem dashed black;
+  padding-bottom: 0.5rem;
   display: inline-flex;
   margin-bottom: 1rem;
 }
 
 .mtc-options__table-wrapper {
   text-align: left;
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 
 .mtc-options__table-hint {
@@ -38,40 +38,40 @@
 }
 
 .mtc-remove-button svg {
-  width: 16px;
+  width: 1rem;
 }
 
 .mtc-button.mtc-remove-button {
   padding: 0;
-  width: 30px;
-  height: 30px;
+  width: 1.875rem;
+  height: 1.875rem;
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
 }
 
 .mtc-options__prefix-table {
   border-spacing: 0;
-  width: 400px;
+  width: 25rem;
 }
 
 .mtc-options__prefix-table th {
-  padding-bottom: 4px;
+  padding-bottom: 0.25rem;
 }
 
 .mtc-options__table-wrapper {
-  max-height: 400px;
+  max-height: 25rem;
   overflow: auto;
 }
 
 .mtc-options__prefix-table input {
-  height: 30px;
+  height: 1.875rem;
   box-sizing: border-box;
   width: 100%;
 }
 
 .mtc-options__prefix-table td {
-  padding-top: 2px;
-  padding-bottom: 2px;
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
 }
 
 .mtc-button {
@@ -84,11 +84,11 @@
   color: white;
   border: none;
   border-radius: 0;
-  padding: 6px 12px;
+  padding: 0.375rem 0.75rem;
   text-transform: uppercase;
   font-weight: 400;
   line-height: 1.5;
-  letter-spacing: 1px;
+  letter-spacing: 0.0625rem;
 }
 
 .mtc-button:hover {
@@ -97,8 +97,8 @@
 
 .mtc-button#save,
 .mtc-button#cancel {
-  padding-left: 16px;
-  padding-right: 16px;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .mtc-button#save:hover,
@@ -116,20 +116,20 @@
 
 .mtc-input {
   background-color: #fff;
-  border: 1px solid #ccc;
-  padding: 6px 12px;
+  border: 0.0625rem solid #ccc;
+  padding: 0.375rem 0.75rem;
   border-radius: 0;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  min-height: 30px;
+  box-shadow: inset 0 0.0625rem 0.0625rem rgba(0, 0, 0, 0.075);
+  min-height: 1.875rem;
 }
 
 .mtc-options__prefix-table__add-button {
   width: 100%;
-  margin-top: 8px;
+  margin-top: 0.5rem;
 }
 
 .mtc-options__footer {
-  margin-top: 12px;
+  margin-top: 0.75rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
